--- a/webservice/src/main/resources/exporter/html/catalogue.css
+++ b/webservice/src/main/resources/exporter/html/catalogue.css
@@ -86,6 +86,9 @@ header {
 .HigherTaxon > .References {
     padding: 0px;
 }
+.Name > i:first-child {
+    font-weight: bold;
+}
 .level1 {
     padding-top: 20px;
     font-size: 2.4rem;
@@ -116,14 +119,20 @@ header {
     padding-left: 40px;
     font-size: 1.0rem;
 }
+.Vernacular {
+    padding-right: 10px;
+}
 .Region {
     display: inline;
     padding-left: 10px;
     font-size: 1.0rem;
 }
-.References, .Synonyms, .Distribution {
+.References, .Synonyms, .Distribution, .Vernaculars {
     padding-top: 10px;
     font-size: 1.0rem;
+}
+.Vernaculars {
+    padding-left: 40px;
 }
 
 @media (max-width: 1000px) {
